--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
     		<artifactId>spring-security-taglibs</artifactId>
     		<version>5.7.5</version>
 		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
