--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/usermodule
+spring.datasource.url=jdbc:mysql://localhost:3307/user_module_springboot
 spring.datasource.username=root
 spring.datasource.password=mynewpass
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
