--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/user_module_springboot
+spring.datasource.url=jdbc:mysql://localhost:3306/user_module_springboot
 spring.datasource.username=root
-spring.datasource.password=mynewpass
+spring.datasource.password=
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
